@@ -506,7 +506,6 @@ public class Utilities {
 	 * Read a file and return its contents as a String.
 	 */
 	public static String readFile(String filename) throws Exception {
-		// FIXME - this method should be removed and replaced with a FileUtils method
 		File file = new File(filename);
 		if (file.exists()) {
 			// file passed in as full path
